# pyobs-v4l

./: README.md  pyproject.toml  setup.py
pyobs_v4l/: v4lcamera.py
