[tool.poetry]
name = "pyobs-v4l"
version = "0.15.0"
description = "pyobs module for V4L cameras"
authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
license = "MIT"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]
python = ">=3.9,<3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
